--- a/blocks/widget/__button-number/widget__button-number.css
+++ b/blocks/widget/__button-number/widget__button-number.css
@@ -10,4 +10,5 @@
   font-size: 14px;
   background-color: #998080;
   box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
+  font-family: 'Inter';
 }
