--- a/pages/index.css
+++ b/pages/index.css
@@ -1,6 +1,7 @@
-@import url(../style/wrap/wrap.css);
 @import url(../vendor/fonts/inter.css);
-@import url(../style/widget/widget.css);
-@import url(../style/widget/__button-wrap/widget__button-wrap.css);
-@import url(../style/widget/__button-text/widget__button-text.css);
-@import url(../style/widget/__button-number/widget__button-number.css);
+@import url(../blocks/body/body.css);
+@import url(../blocks/wrap/wrap.css);
+@import url(../blocks/widget/widget.css);
+@import url(../blocks/widget/__button-wrap/widget__button-wrap.css);
+@import url(../blocks/widget/__button-text/widget__button-text.css);
+@import url(../blocks/widget/__button-number/widget__button-number.css);
