--- a/pages/index.css
+++ b/pages/index.css
@@ -5,3 +5,17 @@
 @import url(../blocks/widget/__button-wrap/widget__button-wrap.css);
 @import url(../blocks/widget/__button-text/widget__button-text.css);
 @import url(../blocks/widget/__button-number/widget__button-number.css);
+
+@import url(../blocks/widget/__news-wrap/wifgets__news-wrap.css);
+@import url(../blocks/widget/__news-item/widget__news-item.css);
+@import url(../blocks/widget/__news-date-author-wrap/widget__news-date-author-wrap.css);
+@import url(../blocks/widget/__article/widget__article.css);
+@import url(../blocks/widget/__news-author.css/widget__news-author.css);
+@import url(../blocks/widget/__news-paragraph/widget__news-paragraph.css);
+@import url(../blocks/widget/__news-date/widget__news-date.css);
+@import url(../blocks/widget/__news-link/widget__news-link.css);
+
+
+@import url(../blocks/news-button/news-button.css/_not-visited/news-button_not-visited.css);
+@import url(../blocks/news-button/news-button.css/_active/news-button_active.css);
+@import url(../blocks/news-button/news-button.css/_visited/news-button_visited.css);
