--- a/blocks/widget/__news-item/widget__news-item.css
+++ b/blocks/widget/__news-item/widget__news-item.css
@@ -1,12 +1,11 @@
 .widget__news-item {
-  margin: 0;
-  padding: 0 15px;
+  margin: 7px 0 0 0;
+  padding: 8px 15px;
   width: 100%;
-  height: 38px;
+  text-align: left;
   box-sizing: border-box;
   border: none;
   outline: none;
-  margin-bottom: 7px;
   font-family: 'Inter';
   font-size: 18px;
   display: flex;
@@ -16,6 +15,6 @@
   inset 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
-.widget__news-item:last-of-type {
-  margin-bottom: 0;
+.widget__news-item:first-of-type {
+  margin-top: 0;
 }
