--- a/blocks/widget/__news-item/widget__news-item.css
+++ b/blocks/widget/__news-item/widget__news-item.css
@@ -1,5 +1,5 @@
 .widget__news-item {
-  margin: 7px 0 0 0;
+  margin-top: 7px;
   padding: 8px 15px;
   width: 100%;
   text-align: left;
@@ -13,8 +13,4 @@
   background-color: #DBDBDB;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 
   inset 0px 4px 4px rgba(0, 0, 0, 0.25);
-}
-
-.widget__news-item:first-of-type {
-  margin-top: 0;
 }
