--- a/blocks/widget/__news-wrap/wifgets__news-wrap.css
+++ b/blocks/widget/__news-wrap/wifgets__news-wrap.css
@@ -4,7 +4,7 @@
   left: 10vw;
   right: 10vw; */
   height: auto;
-  padding: 15px 13px;
+  padding: 8px 13px 15px 13px;
   background-color: #c4c4c4;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 
   inset 0px 4px 4px rgba(0, 0, 0, 0.25);
