--- a/blocks/widget/__article/widget__article.css
+++ b/blocks/widget/__article/widget__article.css
@@ -4,7 +4,7 @@
   width: 100%;
   box-sizing: border-box;
   background-color: #F3F4F4;
-  display: grid;
+  display: none;
   grid-template-rows: auto auto auto;
   row-gap: 5px;
 }
