--- a/blocks/widget/__news-wrap/wifgets__news-wrap.css
+++ b/blocks/widget/__news-wrap/wifgets__news-wrap.css
@@ -1,8 +1,8 @@
 .widget__news-wrap {
-  position: relative;
-  /* top: 20vh;
+  position: fixed;
+  top: 20vh;
   left: 10vw;
-  right: 10vw; */
+  right: 10vw;
   height: auto;
   padding: 8px 13px 15px 13px;
   background-color: #c4c4c4;
