--- a/news_widget/blocks/widget/__button-number/widget__button-number.css
+++ b/news_widget/blocks/widget/__button-number/widget__button-number.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0 5px;
   min-width: 35px;
-  height: 100%;
+  height: 31px;
   display: flex;
   justify-content: center;
   align-items: center;
